--- a/class_2/sem02-sklearn-linregr.ipynb
+++ b/class_2/sem02-sklearn-linregr.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,6 +777,28 @@
     "Давайте посмотрим на то, какие же признаки оказались самыми \"сильными\". Для этого визуализируем веса, соответствующие признакам. Чем больше вес &mdash; тем более сильным является признак.\n",
     "\n",
     "**Вопрос**: Почему это не совсем правда?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 6), (3, 5), (1, 4)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1, 3, 2]\n",
+    "b = [4, 5, 6]\n",
+    "sorted(list(zip(a, b)), key=lambda x: x[1], reverse=True)"
    ]
   },
   {
