--- a/class_11/class-11_clustering.ipynb
+++ b/class_11/class-11_clustering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Кластеризация и понижение размерности\n",
+    "# Кластеризация\n",
     "\n",
     "Кластеризация &mdash; это метод машинного обучения, который включает группировку данных в пространстве признаков. Теоретически, точки, находящиеся в одной группе, должны иметь схожие свойства, в то время как точки в разных группах должны иметь сильно отличающиеся свойства. \n",
     "\n",
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "k_means = KMeans(n_clusters = 3)\n",
+    "k_means = KMeans(n_clusters=3)\n",
     "k_means = k_means.fit(X)\n",
     "clusters = k_means.predict(X)\n",
     "plt.scatter(X[:,0], X[:,1], c = clusters)\n",
@@ -110,8 +110,8 @@
     }
    ],
    "source": [
-    "plt.figure(figsize= (15,8))\n",
-    "for n_c in range(2,8):\n",
+    "plt.figure(figsize=(15,8))\n",
+    "for n_c in range(2, 8):\n",
     "    k_means = KMeans(n_clusters = n_c)\n",
     "    k_means = k_means.fit(X)\n",
     "    clusters = k_means.predict(X)\n",
@@ -688,6 +688,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
